--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
     "react": "^17.0.2",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^17.0.2",
+    "react-h5-audio-player": "^3.8.3",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
