--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "dev": "vite --open",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port=8888"
   },
   "dependencies": {
+    "@vanilla-extract/css": "^1.6.8",
+    "@vanilla-extract/vite-plugin": "^3.1.4",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
