--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@vanilla-extract/vite-plugin": "^3.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.10.0",
     "react-router-dom": "^6.3.0",
     "typescript": "^4.6.2",
-    "video.js": "^7.18.1",
     "zustand": "^3.7.1"
   },
   "devDependencies": {
